--- a/bower.json
+++ b/bower.json
@@ -1,31 +1,40 @@
 {
-  "name": "polymer-sortablejs",
-  "homepage": "https://github.com/SortableJS/polymer-sortablejs",
-  "main": "sortablejs.html",
-  "authors": [
-    "Guten Ye <ywzhaifei@gmail.com>"
-  ],
-  "description": "Minimalist library for reorderable drag-and-drop lists on modern browsers and touch devices. No jQuery.",
-  "keywords": [
-    "sortable",
-    "reorder",
-    "list",
-    "html5",
-    "drag",
-    "and",
-    "drop",
-    "dnd",
-    "web-components"
-  ],
-  "license": "MIT",
-  "ignore": [
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
-  "dependencies": {
-    "polymer": "polymer/polymer#^1.6.0",
-    "Sortable": "sortablejs#^1.5.1"
-  }
+    "name": "polymer-sortablejs",
+    "homepage": "https://github.com/SortableJS/polymer-sortablejs",
+    "version": "2.0.0",
+    "authors": [
+        "Guten Ye <ywzhaifei@gmail.com>"
+    ],
+    "description": "Minimalist library for reorderable drag-and-drop lists on modern browsers and touch devices. No jQuery.",
+    "keywords": [
+        "sortable",
+        "reorder",
+        "list",
+        "html5",
+        "drag",
+        "and",
+        "drop",
+        "dnd",
+        "web-components"
+    ],
+    "license": "MIT",
+    "ignore": [
+        "node_modules",
+        "bower_components",
+        "test",
+        "tests"
+    ],
+    "dependencies":
+    {
+        "polymer": "polymer/polymer#^2.0.0"
+    },
+    "devDependencies":
+    {
+        "iron-component-page": "PolymerElements/iron-component-page#^3.0.0",
+        "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
+        "web-component-tester": "Polymer/web-component-tester#^6.0.0",
+        "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
+        "paper-input": "PolymerElements/paper-input#^2.0.0",
+        "paper-icon": "PolymerElements/paper-icon#^2.0.0",
+        "paper-icons": "PolymerElements/paper-icons#^2.0.0"
 }
